--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
 
 
 
-                <a href="Sketches.html"><h2>DRAWINGS</h2></a>
-                <a href="Posters.html"><h2>POSTERS</h2></a>
-                <a href=""><h2>ABOUT ME</h2></a>
+                <a href="Sketches.html"><h2>ABOUT ME</h2></a>
+                <a href="Posters.html"><h2>DRAWINGS</h2></a>
+                <a href=""><h2>POSTERS</h2></a>
+                <a href=""><h2>GRAFIK DESIGN</h2></a>
+                <a href=""><h2>WEB DESIGN</h2></a>
+               
 
 
 
